# claude-hackathon-2026-chansu

./: .gitignore  BUILD_PLAN.md  CLAUDE.md  CLAUDE_CODE_KICKOFF.md  CODEX_DAY4_DESIGN_LOOP_REVIEW.md  PROJECT.md  README.md  SOMEDAY.md  pyproject.toml
.claude/: launch.json
.claude/skills/chansu-design/: SKILL.md
.streamlit/: config.toml
chansu/: __init__.py  cli.py  comparison.py  ingest.py  ingest_prompts.py  references.py  render_mol.py  report.py
chansu/core/: __init__.py  generation.py  loaders.py  matching.py  models.py  pipeline.py  scoring.py
chansu/reasoning/: __init__.py  adapter.py  design_reasoning.py  local_adapter.py  openai_compatible.py  registry.py
chansu/ui/: __init__.py  app.py  gate.py  ingest.py  memo.py  models.py  notation.py  sources.py  state.py  theme.py  viewer.py  workspace.py
data/: config.json
data/compounds/: bufalin.json  ursolic_acid.json
data/strategies/: ester_prodrug_pk_masking.json  glycosylation_isoform_selectivity.json  soft_drug_self_inactivation.json  targeting_ligand_conjugation.json  tumor_activated_prodrug_enzyme.json  tumor_activated_prodrug_hypoxia.json
data/transformations/: carboxyl_to_ethyl_ester.json  o_acetylation.json
derisk/: __init__.py  cli.py
derisk/core/: loaders.py  models.py  properties.py
derisk/reasoning/: adapter.py
docs/: BUILD-LOG.md  codex-python-core-review.md  day5-streamlit-ui-design.md  gotchas.md  ingestion-design.md  ingestion-plan.md  local-model-handoff.md  local-model-windows-report.md  multi-model-design.md  multi-model-plan.md  reasoning-depth-design.md
docs/design/: chansu-styleguide.html
reference-material/: README.md
scripts/: local_smoke_test.py
tests/: test_comparison.py  test_core.py  test_ingest.py  test_ingest_prompts.py  test_openai_compatible.py  test_pipeline.py  test_reasoning.py  test_reasoning_loop.py  test_references.py  test_registry.py  test_render_mol.py  test_ui_ingest_import.py  test_ui_models_import.py
(+1 files in other folders)
