[project]
name = "chansu"
version = "0.1.0"
description = "Generic medicinal-chemistry engine: ground a natural compound in literature and generate citation-backed modification hypotheses. The compound lives in data; the engine stays generic."
readme = "README.md"
# RDKit wheels lag the newest CPython; pin below 3.14 until wheels catch up.
requires-python = ">=3.11,<3.14"
dependencies = [
    "rdkit>=2024.3",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# The Claude reasoning backend (chansu.reasoning.adapter.ClaudeReasoningModel). Optional and
# imported lazily so the core runs without it.
claude = ["anthropic>=0.40"]
# OpenAI-compatible reasoning backends (ChatGPT, a local Ollama/vLLM server, any /v1 endpoint),
# imported lazily. python-dotenv lets the Streamlit app load API keys from a local .env.
openai = ["openai>=1.40"]
app = ["python-dotenv>=1.0"]

[project.scripts]
chansu = "chansu.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chansu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
